force-app/main/default/objects/Tableau_Viz_Setting__mdt/Tableau_Viz_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Mapping between filter and field on object defined in Tableau Viz Definition</description>
    <label>Tableau Viz Setting</label>
    <pluralLabel>Tableau Viz Settings</pluralLabel>
</CustomObject>