force-app/main/default/objects/Tableau_Viz_Setting__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Full field name (Dot notation ok)</description>
    <inlineHelpText>Full field name (Dot notation ok)</inlineHelpText>
    <label>Field Name</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>