force-app/main/default/objects/Tableau_Viz_Setting__mdt/fields/Filter_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Name__c</fullName>
    <description>Exact name of the Tableau Filter parameter</description>
    <inlineHelpText>Exact name of the Tableau Filter parameter</inlineHelpText>
    <label>Filter Name</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>