force-app/main/default/objects/Tableau_Viz_Setting__mdt/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <description>Name of Parent/Child relationship to build an Array from child records</description>
    <inlineHelpText>Name of Parent/Child relationship to build an Array from child records</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>