force-app/main/default/objects/Tableau_Viz_Setting__mdt/fields/Selection__c.field-meta.xml
<CustomField>
    <fullName>Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use selection instead of filter</description>
    <inlineHelpText>Use selection instead of filter</inlineHelpText>
    <label>Selection</label>
    <type>Checkbox</type>
</CustomField>