force-app/main/default/objects/Tableau_Viz_Setting__mdt/fields/Tableau_Viz_Definition__c.field-meta.xml
<CustomField>
    <fullName>Tableau_Viz_Definition__c</fullName>
    <description>Parent Viz Setting Definition</description>
    <inlineHelpText>Parent Viz Setting Definition</inlineHelpText>
    <label>Tableau Viz Definition</label>
    <referenceTo>Tableau_Viz_Definition__mdt</referenceTo>
    <relationshipLabel>Tableau Viz Settings</relationshipLabel>
    <relationshipName>Tableau_Viz_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>