force-app/main/default/objects/Tableau_Viz_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RECORDFIELD</fullName>
                <default>true</default>
                <label>Record Field Value</label>
            </value>
            <value>
                <fullName>CHILDREC</fullName>
                <label>Child Records</label>
            </value>
            <value>
                <fullName>USERFIELD</fullName>
                <label>Current User Field Value</label>
            </value>
            <value>
                <fullName>USERCHILDREC</fullName>
                <label>Current User Child Records</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>